--- a/index.html
+++ b/index.html
@@ -6,16 +6,38 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!--FONTS-->
+   <!--FONTS-->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <!--CSS-->
+   <!--CSS-->
   <link rel="stylesheet" href="assets/css/styles.css" />
+   <!--ICONS-->
+  <script src="https://kit.fontawesome.com/941e120c9d.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <title>Hackathon</title>
 </head>
 
-<body>
+<body class="container">
    
+  <section id="services">
+
+    <h1>Serviços</h1>
+    <h4>is simply dummy text of the printing </h4>
+
+    <div class="service-card-container">
+      <div class="service-card">      
+        <i class="fa fa-brands fa-creative-commons-remix"></i>
+      </div>
+      <div class="service-card">
+       <i class="fa fa-brands fa-creative-commons-remix"></i>
+      </div>
+      <div class="service-card">
+        <i class="fa fa-brands fa-creative-commons-remix"></i>
+      </div>
+    </div>
+
+  </section>
+  
 
 </body>
 </html>
