Navbar supostamente finalizada! Efeito de underline colocado e alterações para o padrão do site.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,21 @@
 </head>
 
 <body class="container">
-   
+
+  <nav class="nav">
+    <div class="logo">Hackathon</div>
+    <ul class="nav-links">
+        <div class="menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Para Empresas</a></li>
+          <li><a href=https://www.google.com>Talentos</a></li>
+          <li><a href=#services>Serviços</a></li>
+          <li><a href="#">Contato</a></li>
+        </div>
+    </ul>
+  </nav> 
+
   <section id="services">
 
     <h1>Serviços</h1>
@@ -37,6 +51,8 @@
     </div>
 
   </section>
+
+  
   
 
 </body>
