ajudando no navbar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
 </head>
 
 <body class="container">
+
+  <nav class="nav">
+    <div class="logo">Hackathon</div>
+    <ul class="nav-links">
+        <div class="menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Para Empresas</a></li>
+          <li><a href="https://www.google.com/%22%3ETalentos">Talentos</a></li>
+          <li><a href=#services>Serviços</a></li>
+          <li><a href="#">Contato</a></li>
+        </div>
+    </ul>
+  </nav>
    
   <section id="services">
 
