Adicionando descrição e formulário de contato

--- a/index.html
+++ b/index.html
@@ -19,6 +19,47 @@
    <main class="wrapper">
      <h1>Bem vindos!!</h1>
    </main>
+  
+   <section id="servicos" class="sessao1">
+    <div class="container">
+      <div class="texto-sessao-1">
+        <h2>DESENVOLVEMOS SISTEMAS ÚNICOS</h2>
+        <P>Tudo o que precisa, você encontra aqui</P>
+        <ul>
+          <li>Sites</li>
+          <li>Lojas Virtuais</li>
+          <li>Sistemas</li>
+          <li>Aplicativos</li>
+        </ul>
+      </div><!--div texto-sessao-1-->
+    </div><!--div container-->
+   </section><!--sessao1---->
+  
+   <section id="contato" class="contato">
+		<h2>Contato</h2>
+		<form>
+			<div class="form-wraper w100">
+				<span>Nome:</span>
+				<input placeholder="* Obrigatório" name="nome" type="text" required/>
+			</div><!--form-wraper-->
+			<div class="form-wraper w50">
+				<span>E-mail:</span>
+				<input placeholder="* Obrigatório" name="e-mail" type="text" required/>
+			</div><!--form-wraper-->
+			<div class="form-wraper w50">
+				<span>Telefone:</span>
+				<input placeholder="* Obrigatório" name="e-mail" type="text" required/>
+			</div><!--form-wraper-->
+			<div class="form-wraper w100">
+				<span>Mensagem:</span>
+				<textarea placeholder="Escreva sua mensagem..." ></textarea>
+			</div><!--form-wraper-->
+			<div class="form-wraper w100" style="text-align: center;">
+				<input type="submit" id="button" name="acao" value="Enviar">
+      </div><!--form-wraper-->
+			<div class="clear"></div>
+		</form>
+	</section><!--contato-->
 
   <footer>
     <div class="container">
