Tentando criar navbar responsivo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="nav">
         <a class="logo">TI Solutions</a>
         <ul class="nav-links" >
-            <div id="myLinks" class="menu">
+            <div class="grid menu">
               <li><a href=#home>Home</a></li>
               <li><a href=#sobre>Sobre</a></li>      
               <li><a href=#services>Serviços</a></li> 
@@ -34,9 +34,9 @@
               <li><a href=#contato>Contato</a></li>
             </div>
         </ul>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="toggle fa fa-bars"></i>
-        </a>       
+       
+        <i class="toggle icon-menu fa fa-bars"></i>
+           
     </nav>
   </header>
 
