--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
               <li><a href=#sobre>Sobre</a></li>      
               <li><a href=#services>Serviços</a></li> 
               <li><a href=#talentos>Talentos</a></li>            
+              <li><a href=#fundadores>Talentos</a></li>            
               <li><a href=#contato>Contato</a></li>
             </div>
         </ul>
